--- a/practice.html
+++ b/practice.html
@@ -14,7 +14,7 @@
     <H1 class="heading-1">Nahsang Gahlia Full Stack Developer</H1>
     <h3>Alexandria, Virgina | 591-205-7340 | Javanerd98@gmail.com </h3>
 
-    <h2 style="color: black;">Introduction</h2>
+    <h2 style="color: rgb(0, 221, 255);">Introduction</h2>
     <p> My name is Nahsang Gahlia and I am an aspiring website developer with the knowlege in full stack
         development my goal is to focus on coding tasks given from steakholders with great exacution.<br>
         I am able to work in teams and create innavative projects that drives the comapny to success using new
